--- a/index.html
+++ b/index.html
@@ -68,9 +68,12 @@
 
         <p>We are translating the wonderful stories from the <a href="http://africanstorybook.org/">African Storybook Project</a> into as many languages as possible.</p>
 
-        <p>To learn about the project and our goals, take a look at the <a href="about">about page</a>. For a more detailed overview, see our <a href="https://github.com/global-asp/global-asp">main project page</a>.</p>
+        <p>To learn about the project and our goals, take a look at the <a href="about">about page</a>. For a more detailed overview, see our <a href="https://github.com/global-asp/global-asp">main project page on GitHub</a>.</p>
 
         <p>For a list of all translated stories in downloadable PDF format, click <a href="stories">the link above</a>.</p>
+
+        <div id="btn_div"><p><center><button class="big_btn" type="button" onclick="window.location='translator'">Click here to begin translating stories!</button></p>
+        <p class="stats">This will take you to our simple story translator which you can start using right away.<br>No need to register or log in, just pick a language and start translating!</p></center></div>
 
         <p>There is a <a href="stories/master.html">master list of source stories</a> from the African Storybook Project. Most of these haven't been translated yet, but feel free to pick one you like and start translating!</p>
 
