--- a/translator/thanks.html
+++ b/translator/thanks.html
@@ -3,14 +3,23 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
     <title>Thank you!</title>
-    <meta content="">
     <link rel="stylesheet" type="text/css" href="https://yegor256.github.io/tacit/tacit.min.css"/>
+    <script type="text/javascript">
+      function return_to_story() {
+        var url = location.href;
+        if (/\?/.test(url) == true) {
+          var args = /\?(\d+)/.exec(url)[1];
+          var redir = document.getElementById("redirect")
+          redir.setAttribute("onclick", "window.location='https://global-asp.github.io/translator/?" + args + ";'");
+        }
+      }
+    </script>
   </head>
-  <body>
+  <body onload="return_to_story()">
     <h1>Your translation was submitted successfully.</h1>
     <br>
     <p>Thanks for contributing to the <a href="https://global-asp.github.io/">Global African Storybook Project</a>!</p>
     <p>Press the button below to return to the website and <a href="https://global-asp.github.io/translator">translate another story</a>.</p>
-    <input type="button" onclick="window.location='https://global-asp.github.io/translator'" value="Go back">
+    <input id="redirect" type="button" onclick="window.location='https://global-asp.github.io/translator'" value="Go back">
   </body>
 </html>
