translator - fix extraneous semicolon

--- a/translator/thanks.html
+++ b/translator/thanks.html
@@ -10,7 +10,7 @@
         if (/\?/.test(url) == true) {
           var args = /\?(\d+)/.exec(url)[1];
           var redir = document.getElementById("redirect")
-          redir.setAttribute("onclick", "window.location='https://global-asp.github.io/translator/?" + args + ";'");
+          redir.setAttribute("onclick", "window.location='https://global-asp.github.io/translator/?" + args + "'");
         }
       }
     </script>
