--- a/experiments/gt-no/index.html
+++ b/experiments/gt-no/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
-    <title>Global-ASP Translator</title>
+    <title>Global-ASP Translator Norsk (Beta)</title>
     <link rel="stylesheet" type="text/css" href="https://yegor256.github.io/tacit/tacit.min.css"/>
     <link rel="stylesheet" type="text/css" href="translator.css"/>
     <script src="stories.js" type="text/javascript"></script>
