--- a/experiments/gt-no/thanks.html
+++ b/experiments/gt-no/thanks.html
@@ -10,7 +10,7 @@
         if (/\?/.test(url) == true) {
           var args = /\?(\d+)/.exec(url)[1];
           var redir = document.getElementById("redirect")
-          redir.setAttribute("onclick", "window.location='https://global-asp.github.io/translator/?" + args + "'");
+          redir.setAttribute("onclick", "window.location='https://global-asp.github.io/experiments/gt-no/?" + args + "'");
         }
       }
     </script>
@@ -19,7 +19,7 @@
     <h1>Din oversettelse ble vellykket sendt.</h1>
     <br>
     <p>Takk for å bidra til <a href="https://global-asp.github.io/">Global African Storybook Project</a>!</p>
-    <p>Trykk på knappen under for å gå tilbake til nettstedet og <a href="https://global-asp.github.io/translator">oversette en annen fortelling</a>.</p>
-    <input id="redirect" type="button" onclick="window.location='https://global-asp.github.io/translator'" value="Go back">
+    <p>Trykk på knappen under for å gå tilbake til nettstedet og <a href="https://global-asp.github.io/experiments/gt-no/">oversette en annen fortelling</a>.</p>
+    <input id="redirect" type="button" onclick="window.location='https://global-asp.github.io/experiments/gt-no/'" value="Go back">
   </body>
 </html>
