translation of "translator" - fixes #10

--- a/experiments/gt-no/index.html
+++ b/experiments/gt-no/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
-    <title>Global-ASP Translator Norsk (Beta)</title>
+    <title>Global-ASP oversetter på norsk (beta)</title>
     <link rel="stylesheet" type="text/css" href="https://yegor256.github.io/tacit/tacit.min.css"/>
     <link rel="stylesheet" type="text/css" href="translator.css"/>
     <script src="stories.js" type="text/javascript"></script>
@@ -11,7 +11,7 @@
   <body onload="story_api()">
     <div id="container">
 <div id="frametop">
-    <h1>Global-ASP Translator Norsk <span style="font-variant:small-caps; font-style:italic;">BETA</span></h1>
+    <h1>Global-ASP oversetter på norsk <span style="font-variant:small-caps; font-style:italic;">BETA</span></h1>
     <div id="status_bar"><span id="permalink" style="display:none">&nbsp;</span><a href="#" onclick="overlay('about')">Om</a><span class="dot"> • </span><a href="#" onclick="overlay('help')">Hjelp</a><span class="dot"> • </span><a href="https://github.com/dohliam/gasp-translator" title="Project page on GitHub"><img src="https://cloud.githubusercontent.com/assets/9295750/10420174/4bff1bc4-7041-11e5-80d5-496a9cdd2672.png"></a><span id="nav_buttons" style="display:none"><span class="dot"> • </span><a href="#" id="prev" accesskey="p" title="Forrige fortelling" onclick="translate_story('prev')"><img src="previous.png"></a><span class="dot"> • </span><a href="#" accesskey="r" title="Tilfeldig fortelling" onclick="random_story()"><img src="random.png"></a><span class="dot"> • </span><a href="#" id="next" accesskey="n" title="Neste fortelling" onclick="translate_story(0)"><img src="next.png"></a></span></div>
 </div>
 
